--- a/hive-service/.settings/org.eclipse.wst.common.component
+++ b/hive-service/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <dependent-module archiveName="hive-api-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/hive-api/hive-api">
             <dependency-type>uses</dependency-type>
         </dependent-module>
@@ -10,6 +11,9 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="hive-dao-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/hive-dao/hive-dao">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="hive-common-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/hive-common/hive-common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="hive-service"/>
